syntax = "proto3";
package bench.payload;

option java_multiple_files = true;
option java_package = "grgic.antonio.grpc_spring_boot.proto";
option java_outer_classname = "PayloadProto";

service PayloadService {
  rpc GetSmall  (Empty) returns (PayloadResponse);
  rpc GetMedium (Empty) returns (PayloadResponse);
  rpc GetLarge  (Empty) returns (PayloadResponse);
  rpc StreamSmall(ChunkRequest) returns (stream ChunkPayloadResponse);
  rpc StreamMedium(ChunkRequest) returns (stream ChunkPayloadResponse);
  rpc StreamLarge(ChunkRequest) returns (stream ChunkPayloadResponse);
}

message Empty {}

message PayloadResponse {
  bytes payload = 1;
}

message ChunkPayloadResponse {
  string payload_id = 1;
  int32 seq = 2;
  bytes data = 3;
  bool eof = 4;
}

message ChunkRequest {
  string payload_id = 1;
  int32 chunk_size = 2;
}
